# cga-py

./: .coveragerc  .gitignore  .gitlab-ci.yml  LICENSE  README.md  SECURITY.md  ToDo.md  Untitled.ipynb  class_optimization_test.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  testing.py  tox.ini  tutorial.py  visualization_testing.py
.github/: FUNDING.yml
.github/workflows/: codecov.yml  codeql-analysis.yml  pubplish_to_pypi.yml  python-package.yml  tests.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
cga_py/: __init__.py  base_objects.py  conditions.py  dorst_motions.py  errors.py  four_quaternions.py  geom_generators.py  kinematic_polynomials.py  multivector.py  operators.py  permutations.py  permutations_pm.py  random.py  random_gen.py  visualization.py
cga_py/__pycache__/: multivector.invert-456.py310.1.nbc  multivector.invert-456.py310.nbi  multivector.mul-5.py310.1.nbc  multivector.mul-5.py310.nbi  multivector.wedge-731.py310.1.nbc  multivector.wedge-731.py310.nbi
doc/source/: conf.py  index.rst
experiments/: class_optimization_test.py  visualization_testing.py
helper/: InnerProduct.txt  Multiplication  OuterProduct.txt  Reverse.txt  index_shift.py  permutator.py  pm_perm.py
tests/: test_conditions.py  test_dorst_motions.py  test_errors.py  test_four_quaternion.py  test_geom_generators.py  test_kinematic_poly.py  test_multivec.py  test_operators.py  test_rand.py  test_sample.py  test_vis.py  testing.py
