[project]
name = "cga-py"
version = "1.3.2"
authors = [
    {name = "Daren Thimm", email = "daren.thimm@gmx.at"},
]
maintainers = [
    {name = "Daren Thimm", email = "daren.thimm@gmx.at"},
]
description = "Implementation of CGA for python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]
dependencies = [
    "setuptools>=69.5.1",
    "numba>=0.55.2",
    "numpy>=1.21",
    "pyqtgraph>=0.12.4",
    "PyQt5>=5.15.6",
    "PyQt6>=6.3.0",
    "PyOpenGL==3.1.6"
]
license = {"file"= "LICENSE"}

[tool.setuptools]
packages = ["cga_py"]


[build-system]
requires = [
"setuptools>=69.5.1",
]
build-backend = "setuptools.build_meta"

# [project.optional-dependencies]
# doc = [
#     "sphinx ~= 7.1.0",
#     "myst-parser",
#     "sphinx-rtd-theme",
#     "nbsphinx",
#     "numpydoc"
# ]
[project.optional-dependencies]
dev = [
    "flake8 == 6.0.0",
    "pytest = 7.2.0",
    "pre-commit == 3.3.3",
    "tox == 3.27.0"
]

[project.urls]
Source  = "https://github.com/physicspenguin/cga-py"

