[build-system]
requires = [
"setuptools>=69.5.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "cga-py"
version = "1.3.2"
authors = [
    {name = "Daren Thimm", email = "daren.thimm@gmx.at"},
]
maintainers = [
    {name = "Daren Thimm", email = "daren.thimm@gmx.at"},
]
description = "Implementation of CGA for python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]
dependencies = [
    "setuptools>=80.9.0",
    "numba>=0.61.2",
    "numpy>=1.21",
    "pyqtgraph>=0.13.7",
    "PyQt5>=5.15.11",
    "PyQt6>=6.9.1",
    "PyOpenGL>=3.1.10"
]
license = {"file"= "LICENSE"}

[tool.setuptools]
packages = ["cga_py"]

[project.optional-dependencies]
doc = [
    "sphinx ~= 8.2.3",
    "myst-parser",
    "sphinx-rtd-theme",
    "nbsphinx",
    "numpydoc"
]
dev = [
    "flake8 == 7.3.0",
    "pytest == 8.4.1",
    "pytest-cov == 6.2.1",
    "pre-commit == 4.3.0",
    "tox == 4.28.4"
]
publish =[
  "twine >= 6.1.0",
  "build >= 1.3.0"
]

[project.urls]
Source  = "https://github.com/physicspenguin/cga-py"

